--- a/wait-queue/package.json
+++ b/wait-queue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "core",
+  "name": "wait-queue",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ioredis": "^5.3.2",
     "koa": "^2.14.2",
-    "koa-router": "^12.0.1"
+    "koa-router": "^12.0.1",
+    "mysql2": "^3.7.0",
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "@types/koa": "^2.13.12",
