--- a/wait-queue/package.json
+++ b/wait-queue/package.json
@@ -10,15 +10,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
+    "cron": "^3.1.6",
+    "http-status-codes": "^2.3.0",
     "ioredis": "^5.3.2",
     "koa": "^2.14.2",
+    "koa-pino-logger": "^4.0.0",
     "koa-router": "^12.0.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "mysql2": "^3.7.0",
+    "pino": "^8.17.2",
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "@types/koa": "^2.13.12",
+    "@types/koa-pino-logger": "^3.0.4",
     "@types/koa-router": "^7.4.8",
+    "@types/lodash": "^4.14.202",
     "typescript": "^5.3.2"
   }
 }
