--- a/wait-queue/.env
+++ b/wait-queue/.env
@@ -4,8 +4,11 @@ REDIS_PORT = 6379
 REDIS_PASSWORD = 123456
 
 # mysql
-DB_DATABASE = test
+DB_DATABASE = waitqueue
 DB_HOST = 127.0.0.1
 DB_PORT = 3306
-DB_USER = remote
+DB_USER = test
 DB_PASSWORD = 123456
+
+# 业务型配置
+CHECK_TASK_DIFF_CRON = '0 0 0 * * *'
