--- a/wait-queue/package.json
+++ b/wait-queue/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "axios": "^1.6.5",
     "cron": "^3.1.6",
+    "dotenv": "^16.3.1",
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.3.2",
     "koa": "^2.14.2",
+    "koa-bodyparser": "^4.4.1",
     "koa-pino-logger": "^4.0.0",
     "koa-router": "^12.0.1",
     "lodash": "^4.17.21",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/koa": "^2.13.12",
+    "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-pino-logger": "^3.0.4",
     "@types/koa-router": "^7.4.8",
     "@types/lodash": "^4.14.202",
